--- a/hello.html
+++ b/hello.html
@@ -15,9 +15,18 @@
 		<!-- TITRE -->
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
-		</div>
+		</div> 
+
+		<!-- DESCRIPTION -->
 		<div>
+			<h1>Ma description</h1>
 			<p>Bonjour, je suis Lamarti</p>
+		</div>
+
+		<!-- RECOMPENSE -->
+		<div>
+			<h1>Mes récompense</h1>
+			<p>En construction ...</p>
 		</div>
 		
 	
